Changed link to JS in HTML

--- a/index.html
+++ b/index.html
@@ -172,6 +172,6 @@
         </div>
       </div>
     </div>
-    <link rel="stylesheet" href="src/index.js" />
+    <script src="src/index.js"></script>
   </body>
 </html>
