Added git-hub link

--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
           </div>
         </div>
       </div>
+      <br />
+      <p>
+        <a
+          class="git-hub-link"
+          href="https://github.com/anafmt/Weather-Application"
+          target="_blank"
+        >
+          Open-source code </a
+        >by Ana FM Tavares
+      </p>
     </div>
     <script src="src/index.js"></script>
   </body>
