Changed API and added the relevant icon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-3">
-                  <i class="fa-solid fa-sun sun-icon-top"></i>
+                  <!-- <i class="fa-solid fa-sun sun-icon-top"></i> -->
+                  <img src="" alt="" id="icon" />
                   <span class="line">
                     <h6>
                       <strong id="temperature">24</strong>
