--- a/index.html
+++ b/index.html
@@ -38,17 +38,15 @@
                   <img src="" alt="" id="icon" />
                   <span class="line">
                     <h6>
-                      <strong id="temperature">24</strong>
+                      <strong id="temperature"></strong>
                       <small class="units">°C | <a href="#"> °F</a> </small>
                     </h6>
                   </span>
                 </div>
                 <div class="col-5">
                   <span class="line">
-                    <h3 id="chosen-city">Luxembourg</h3>
-                    <div class="col-12" id="current-date">
-                      Sunday, 28 May 17:36
-                    </div>
+                    <h3 id="chosen-city"></h3>
+                    <div class="col-12" id="current-date"></div>
                   </span>
                 </div>
                 <div class="col-3">
@@ -76,44 +74,44 @@
                 </div>
               </div>
               <br />
-              <br />
-              <div class="row">
-                <div class="col-7">
-                  <form id="search-form">
+              <form id="search-form">
+                <div class="row">
+                  <div class="col-8">
                     <input
                       type="search"
                       id="search-input"
                       placeholder="Type a city..."
                       autofocus="on"
-                      class="form-control shadow-sm border-0"
+                      class="form-control shadow-sm border-0 mb-3"
+                      autocomplete="off"
                       required
                     />
-                    <div class="col-2">
-                      <input
-                        type="submit"
-                        class="btn btn-warning"
-                        value="Search"
-                        class="form-control"
-                      />
-                    </div>
-                  </form>
+                  </div>
+                  <div class="col-2">
+                    <input
+                      type="submit"
+                      class="btn btn-warning"
+                      value="Search"
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="col-2">
+                    <input
+                      type="submit"
+                      id="current-location"
+                      class="btn btn-warning"
+                      value="Local"
+                      class="form-control"
+                    />
+                  </div>
                 </div>
-                <div class="col-5">
-                  <input
-                    type="submit"
-                    id="current-location"
-                    class="btn btn-primary"
-                    value="Local"
-                    class="form-control"
-                  />
-                </div>
-              </div>
+              </form>
               <hr />
               <br />
               <div class="row">
                 <div class="col-sm">
                   <div class="card">
-                    <h6 class="card-title">Day 1</h6>
+                    <span class="card-title">Day 1</span>
                     <i class="fa-solid fa-sun sun-icon"></i>
                     <div class="card-body">
                       <p class="card-text">Xº</p>
@@ -122,7 +120,7 @@
                 </div>
                 <div class="col-sm">
                   <div class="card">
-                    <h6 class="card-title">Day 2</h6>
+                    <span class="card-title">Day 2</span>
                     <i class="fa-solid fa-sun sun-icon"></i>
                     <div class="card-body">
                       <p class="card-text">Xº</p>
@@ -131,7 +129,7 @@
                 </div>
                 <div class="col-sm">
                   <div class="card">
-                    <h6 class="card-title">Day 3</h6>
+                    <span class="card-title">Day 3</span>
                     <i class="fa-solid fa-sun sun-icon"></i>
                     <div class="card-body">
                       <p class="card-text">Xº</p>
@@ -140,7 +138,7 @@
                 </div>
                 <div class="col-sm">
                   <div class="card">
-                    <h6 class="card-title">Day 4</h6>
+                    <span class="card-title">Day 4</span>
                     <i class="fa-solid fa-sun sun-icon"></i>
                     <div class="card-body">
                       <p class="card-text">Xº</p>
@@ -149,7 +147,7 @@
                 </div>
                 <div class="col-sm">
                   <div class="card">
-                    <h6 class="card-title">Day 5</h6>
+                    <span class="card-title">Day 5</span>
                     <i class="fa-solid fa-sun sun-icon"></i>
                     <div class="card-body">
                       <p class="card-text">Xº</p>
