Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                   <span class="line">
                     <h6>
                       <strong id="temperature"></strong>
-                      <small class="units">°C | <a href="#"> °F</a> </small>
+                      <small class="units">
+                        <a href="#" id="celsius-link" class="active">°C</a> |
+                        <a href="#" id="fahrenheit-link"> °F</a>
+                      </small>
                     </h6>
                   </span>
                 </div>
