Changed type button

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                   </div>
                   <div class="col-2">
                     <input
+                      type="button"
                       id="current-location"
                       class="btn btn-warning"
                       value="Local"
