Display the forecast using the API

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
         </div>
         <br />
-        <p>
+        <small>
           <a
             class="git-hub-link"
             href="https://github.com/anafmt/Weather-Application"
@@ -121,7 +121,7 @@
           >
             Open-source code </a
           >by Ana FM Tavares
-        </p>
+        </small>
       </div>
     </div>
     <script src="src/index.js"></script>
