--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
                   <span class="line">
                     <h6>
                       <strong id="temperature"></strong>
-                      <small class="units">
-                        <a href="#" id="celsius-link" class="active">°C</a> |
-                        <a href="#" id="fahrenheit-link"> °F</a>
-                      </small>
+                      <small class="units"> °C </small>
                     </h6>
                   </span>
                 </div>
